# fastapi-custom-auth

./: .env.example  README.md  docker-compose.yml  initial_data.py  pyproject.toml
app/: main.py
app/api/endpoints/: admin.py  auth.py  orders.py
app/core/: config.py  security.py
app/db/: deps.py  session.py
app/models/: __init__.py  auth.py
app/schemas/: admin.py  auth.py  orders.py
migrations/: env.py
migrations/versions/: 12b584e64cd8_add_user_table.py  b6e26793bbf5_initial_migration.py  c8e5628bf56a_add_access_control_tables.py  f2546b2370f3_add_token_blocklist.py
